--- a/indeed.html
+++ b/indeed.html
@@ -1250,8 +1250,8 @@
                 <a href="#" class="text-dark">Yordan J. Martinez Valladares</a>
               </h4>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam
-                accusantium vero sunt!
+                Strong problem-solving skills and a commitment to staying
+                updated with the latest technologies and trends in the field.
               </p>
               <ul class="navbar-nav flex-row">
                 <li class="nav-item">
