--- a/indeed.html
+++ b/indeed.html
@@ -35,7 +35,7 @@
       class="navbar fixed-top shadow-sm navbar-expand-lg navbar-light bg-light py-3 py-lg-0 px-lg-5"
     >
       <h1 class="navbar-brand ml-lg-3 m-0 fw-bold fs-2">
-        <span class="text-primary">Portafolio_</span>Web
+        <span class="text-primary">Portfolio_</span>Web
       </h1>
       <button
         class="navbar-toggler"
@@ -123,7 +123,7 @@
                 </h6>
               </div>
               <div class="col-sm-6 py-2">
-                <h6>Experience: <span class="text-secondary">2 years</span></h6>
+                <h6>Experience: <span class="text-secondary">1 years</span></h6>
               </div>
               <div class="col-sm-6 py-2">
                 <h6>
@@ -156,7 +156,9 @@
             <a href="#contact" class="btn blue btn-outline-primary me-4"
               >Hire Me</a
             >
-            <a href="" class="btn btn-outline-primary">Learn More</a>
+            <a href="#social_media" class="btn btn-outline-primary"
+              >Learn More</a
+            >
           </div>
         </div>
       </div>
@@ -170,7 +172,7 @@
           Skills Overview
         </h3>
         <div class="mx-auto text-center mb-5 text-secondary">
-          I have more than 2 years' experience building rich web applications
+          I have more than 1 years' experience building rich web applications
           for companies. Below is a quick overview of my main technical skill
           sets and tools I use. Want to find out more about my experience?
           <a
@@ -1323,7 +1325,7 @@
             </div>
             <div class="col-md-6">
               <p class="mb-0">
-                PORTAFOLIO_WEB designed by
+                PORTFOLIO_WEB designed by
                 <a class="text-primary">Yordan J.</a>
               </p>
             </div>
