--- a/indeed.html
+++ b/indeed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yordan Portafolio</title>
+    <title>Yordan Portfolio</title>
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -123,7 +123,7 @@
                 </h6>
               </div>
               <div class="col-sm-6 py-2">
-                <h6>Experience: <span class="text-secondary">1 years</span></h6>
+                <h6>Experience: <span class="text-secondary">1 year</span></h6>
               </div>
               <div class="col-sm-6 py-2">
                 <h6>
