--- a/indeed.html
+++ b/indeed.html
@@ -88,8 +88,8 @@
               class="typed-text-output d-inline font-weight-lighter text-primary"
             ></h1>
             <div class="typed-text">
-              Web Designer, Web Developer, Front End Developer, Back End
-              Developer, Apps Designer, Apps Developer
+              Full Stack Developer, Web Developer, Front End Developer, Back End
+              Developer.
             </div>
           </div>
         </div>
@@ -153,9 +153,7 @@
                 </h6>
               </div>
             </div>
-            <a href="#contact" class="btn blue btn-outline-primary me-4"
-              >Hire Me</a
-            >
+            <a href="#contact" class="btn btn-primary me-4">Hire Me</a>
             <a href="#social_media" class="btn btn-outline-primary"
               >Learn More</a
             >
@@ -820,7 +818,7 @@
                         </ul>
                         <p class="text-primary fw-bold">Tecnologies:</p>
                         <ul>
-                          <li>C#, Entity Framework, MySql, Stripe, React</li>
+                          <li>C#, Entity Framework, MySql, React (Hooks)</li>
                         </ul>
                       </div>
                       <div class="modal-footer">
@@ -1227,7 +1225,7 @@
                 </div>
                 <div>
                   <button
-                    class="btn btn-outline-primary"
+                    class="btn btn-primary"
                     type="submit"
                     id="sendMessageButton"
                   >
