--- a/indeed.html
+++ b/indeed.html
@@ -170,9 +170,9 @@
           Skills Overview
         </h3>
         <div class="mx-auto text-center mb-5 text-secondary">
-          I have more than 1 years' experience building rich web applications
-          for companies. Below is a quick overview of my main technical skill
-          sets and tools I use. Want to find out more about my experience?
+          I have more than 1 year' experience building rich web applications for
+          companies. Below is a quick overview of my main technical skill sets
+          and tools I use. Want to find out more about my experience?
           <a
             class="text-link"
             href="https://github.com/ymvalladares?tab=repositories"
@@ -1166,10 +1166,13 @@
     <!--Projcect End-->
 
     <!-- Contact Start -->
-    <div class="container-fluid py-5 mt-5 mb-5" id="contact">
+    <div class="container-fluid py-5 mt-3 mb-5" id="contact">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
+        <div class="row align-items-center">
+          <div class="col-lg-4 pb-4 pb-lg-0">
+            <img class="img-fluid w-100" src="Photos/contact.jpeg" alt="" />
+          </div>
+          <div class="offset-sm-1 col-lg-7">
             <div class="contact-form text-center">
               <div id="success"></div>
               <form id="basic-form" method="post" onsubmit="return false;">
@@ -1238,6 +1241,7 @@
         </div>
       </div>
     </div>
+
     <!-- Contact End -->
 
     <!--Footer Start-->
