--- a/indeed.html
+++ b/indeed.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>Yordan Portfolio</title>
+    <meta name="title" content="Yordan Portfolio" />
+    <meta name="description" content="Discover my skills as a web developer" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://ymvalladares.github.io/portafolioWeb/indeed.html"
+    />
+    <meta property="og:title" content="Yordan Portfolio" />
+    <meta
+      property="og:description"
+      content="Discover my skills as a web developer"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://ymvalladares.github.io/portafolioWeb/indeed.html"
+    />
+    <meta property="twitter:title" content="Yordan Portfolio" />
+    <meta
+      property="twitter:description"
+      content="Discover my skills as a web developer"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -846,7 +884,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
-                      src="Photos/Book_Pictures/1.jpeg"
+                      src="Photos/Book_Pictures/1.png"
                       class="d-block w-100"
                       alt="..."
                     />
