Deploy project in internet updates

--- a/indeed.html
+++ b/indeed.html
@@ -713,10 +713,8 @@
     <!--Projects Start-->
     <section class="py-5" id="projects">
       <div class="container">
-        <h3 class="section-title fw-bold fs-1 text-center mb-3">
-          Projects Galery
-        </h3>
-        <div class="mx-auto text-center mb-5 text-secondary">
+        <h3 class="section-title fw-bold fs-1 text-center">Projects Galery</h3>
+        <div class="mx-auto text-center mb-3 text-secondary">
           Below is a quick overview of my main technical skill sets and tools I
           use. Want to find out more about my experience?
           <a
@@ -724,7 +722,21 @@
             href="https://github.com/ymvalladares?tab=repositories"
             >Check out my GitHub repositories</a
           >.
+          <i class="bi bi-check-circle-fill"></i>
         </div>
+
+        <!-- Alert -->
+        <div
+          class="alert alert-primary d-flex align-items-center mb-5"
+          role="alert"
+          style="border-radius: 10px"
+        >
+          <i class="fas fa-exclamation-circle fs-5 fw-bold"></i>
+          <div class="ms-3">
+            Softwares with backend server have not been deploy in internet.
+          </div>
+        </div>
+
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card">
@@ -809,6 +821,13 @@
                     ...see more</code
                   >
                 </p>
+                <a
+                  class="btn btn-outline-primary btn-sm"
+                  style="width: 100%"
+                  href="https://github.com/ymvalladares/.NetCore-React"
+                  role="button"
+                  >Source Code</a
+                >
                 <!-- Modal -->
                 <div
                   class="modal fade"
@@ -992,6 +1011,13 @@
                     ...see more</code
                   >
                 </p>
+                <a
+                  class="btn btn-outline-primary btn-sm"
+                  style="width: 100%"
+                  href="https://github.com/ymvalladares/BookStore"
+                  role="button"
+                  >Source Code</a
+                >
                 <!-- Modal -->
                 <div
                   class="modal fade"
@@ -1126,6 +1152,13 @@
                     ...see more</code
                   >
                 </p>
+                <a
+                  class="btn btn-outline-primary btn-sm"
+                  style="width: 100%"
+                  href="https://ymvalladares.github.io/Project-Food/"
+                  role="button"
+                  >Demo</a
+                >
                 <!-- Modal -->
                 <div
                   class="modal fade"
